チームLab 仮完成

--- a/index.css
+++ b/index.css
@@ -1,18 +1,76 @@
+header{
+    /* display: block; */
+    position: fixed;
+    height: 100px;
+    /* 実際に画像を貼り付ければ透けない？ */
+}
+
+/* .headerimg{
+    position: relative;
+} */
+
+.headerAll{
+    width: 1200px;
+    height: 120px;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    padding-top: 50px;
+    
+    /* padding-left: 5%;
+    padding-right: 5%; */
+}
+
+
 .header-top{
     float:right;
 }
 
+
 .header-bottom{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     clear:right;
-
+    font-size: 10px;
+    margin-bottom: 30px;
+}
+.title1{
+    justify-content: start;
+    width: 10%;
+}
+.title2{
+    justify-content: space-around;
+    width: 30%;
+}
+.title3{
+    justify-content: space-around;
+    width: 30%;
+}
+.title4{
+    position: absolute;
+    right: 0%;
+    /* width: 20%; */
+}
+.Title{
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 ul{
     display: flex;
 }
 
+.space{
+    width: 1200px;
+    height: 120px;
+}
+
+
+/* mainスタート */
+.mainTop{
+    /* padding: 2% 2% 8% 2%; */
+    margin-bottom: 10ch;
+}
 
 .fontPosition{
     position: relative;
@@ -23,7 +81,7 @@ p{
     right: 0px;
     font-size: 20px;
     color: black;
-    background-color: aqua;
+    background-color: gray;
 }
 
 /* １列目 */
@@ -34,7 +92,7 @@ p{
 }
 
 /* 2列目 */
-.secondcColumm{
+.secondColumm{
     display: flex;
     justify-content: space-around;
 } 
@@ -51,7 +109,6 @@ p{
     display: flex;
     justify-content: space-around;
 }
-
 
 .square1{
     display: flex;
@@ -71,6 +128,11 @@ p{
     justify-content: space-around;
 }
 
+.twopictures{
+    display: flex;
+    justify-content: space-around;
+}
+
 /* 6列目 */
 .sixthColumm{
     display: flex;
@@ -81,4 +143,179 @@ p{
 .seventh{
     display: flex;
     justify-content: flex-start;
+}
+
+
+/* main下部コーナー */
+
+/* calendar のdivがすべて同階層にあるから１まとめのすると正しく動かない */
+
+.main-bottom{
+    background-color:rgb(233, 229, 229);
+    padding: 15% 5% 0 5%;
+    margin-bottom: 0%;
+}
+
+.infomationTitle{
+    text-align: center;
+    margin-bottom: 5%;
+    color: black;
+    font-size: 3ch;
+}
+
+
+.infomation{
+    display: flex;
+    align-items: center;
+    margin-top: 1%;
+    padding: 2%;
+    background-color: white;
+    position: relative;
+}
+
+.caption{
+    height: 20%;
+    width: 10%;
+}
+
+/* ☝☟上下のやつはいらない。「position」で『detail』の位置を決めてるから、『caption』の位置も勝手に決まる */
+
+.detail{
+    height: 20%;
+    width: 80%;
+    position: absolute;
+    left: 20%;
+}
+
+/* .calendar🔵🔵{
+    position: absolute;
+    top: %;
+    right: px;
+    font-size: px;
+    color:;
+    background-color:;
+} */
+
+
+.calendar1{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.calendar2{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.calendar3{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.calendar4{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.calendar5{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.calendar6{
+    display: flex;
+    justify-content: flex-start;
+}
+
+/* main下部のボタン */
+
+.ButtonArea{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10ch;
+}
+
+/* 下2つよくわかってない */
+.button{
+    background-color: rgb(233, 229, 229);
+    border: black 1px solid;
+    padding: 1em;
+    color: black;
+    font-size: 1em;
+}
+.block{
+    display: block;
+    width: 150px;
+    margin: 30px;
+}
+
+
+.additionInfo{
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 0%;
+}
+
+.info1{
+    width: 33%;
+    height: 150px;
+    background-color: white;
+}
+.info2{
+    width: 33%;
+    height: 150px;
+    background-color: black;
+}
+.info3{
+    width: 33%;
+    height: 150px;
+    background-color: white;
+}
+
+
+/* 『footer』スタート */
+
+.footerAll{
+    background-color: black;
+    font-size: 2px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.footerTop{
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    color: white;
+}
+
+
+.footerCenter{
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+    color: rgb(247, 238, 238);
+}
+.PP{
+    margin-right: 30%;
+}
+
+
+.footerbottom{
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    margin: 30px;
+    color: white;
+}
+.facebook{
+    margin-right: 5%;
+}
+.twiter{
+    margin-right: 5%;
+}
+.insta{
+    margin-right: 5%;
 }
